# splitwm

./: Cargo.toml  PORT.md  README.md  build.rs  drive.sh  itest.sh  test.sh  vttest.sh
.claude/skills/verify/: SKILL.md
.scrooge/: checks.toml  ledger.json  overview.md  rates.toml  sandbox.toml
bench/: bench.c  pal.h
src/: assets.rs  backlight.rs  icon.rs  launch.rs  layout.rs  main.rs  menu.rs  notify.rs  oklch.rs  ping.rs  render.rs  shell.rs  state.rs  theme.rs  tree.rs  widgets.rs  wm.rs
src/backend/: headless.rs  mod.rs  tty.rs  winit.rs
src/comp/: actions.rs  anim.rs  chrome.rs  cursor.rs  debug.rs  focus.rs  handlers.rs  icons.rs  indexed.rs  input.rs  layers.rs  manage.rs  mod.rs  notifications.rs  pieces.rs  pointer.rs  quantize.rs  scene.rs  xwayland.rs
src/render/: buttons.rs  chrome.rs  icon_cache.rs  indexed.rs  mod.rs  notify_popup.rs  taskbar.rs  wallpaper.rs
src/wm/: arrange.rs  clients.rs  dock.rs  events.rs  floats.rs  icons.rs  menu.rs  mod.rs  notes.rs  present.rs  types.rs  widgets.rs
src/wm/input/: keyboard.rs  mod.rs  pointer.rs  scroll.rs
src/wm/notifications/: foreign.rs  mod.rs  popups.rs
tests/: socket.rs
