[package]
name = "splitwm"
version = "0.2.0"
edition = "2021"

[dependencies]
# Wayland compositor framework: display/protocol machinery, GLES renderer,
# winit backend for nested development runs, XWayland integration. The TTY
# session backend lives behind the `tty` feature below because its libseat
# link-time dependency isn't installed everywhere this builds.
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_egl",
    # DrmNode plumbing for dmabuf feedback (render-node discovery); the
    # actual DRM output backend stays behind `tty`.
    "backend_drm",
    "renderer_gl",
    "desktop",
    "wayland_frontend",
    "xwayland",
] }
# Chrome art is baked by build.rs; wallpapers and theme icons are decoded at
# runtime via pixel_graphics::magick_decode_rgba (ImageMagick shell-out).
pixel-graphics = { path = "../pixel-graphics" }
pixel-fonts = { path = "../pixel-fonts" }
# Smithay logs through tracing; RUST_LOG-style filtering for debugging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Real-session backend (DRM/GBM scanout, libinput, libseat session). Off by
# default: linking needs the libseat system library (Arch package `seatd`).
tty = [
    "smithay/backend_udev",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_libinput",
    "smithay/backend_session_libseat",
    "smithay/renderer_multi",
]

[build-dependencies]
pixel-graphics = { path = "../pixel-graphics" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
