[package]
name = "splitwm"
version = "0.2.0"
edition = "2021"

[dependencies]
# Wayland compositor framework: display/protocol machinery, GLES renderer,
# winit backend for nested development runs, XWayland integration. The TTY
# session backend lives behind the `tty` feature below because its libseat
# link-time dependency isn't installed everywhere this builds.
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_egl",
    # DrmNode plumbing for dmabuf feedback (render-node discovery); the
    # actual DRM output backend stays behind `tty`.
    "backend_drm",
    "renderer_gl",
    "desktop",
    "wayland_frontend",
    "xwayland",
] }
# Chrome art is baked by build.rs; wallpapers and theme icons are decoded at
# runtime via pixel_graphics::magick_decode_rgba (ImageMagick shell-out).
pixel-graphics = { path = "../pixel-graphics" }
pixel-fonts = { path = "../pixel-fonts" }
# Keysym constants for theme::BINDINGS. X11 keysym values are xkb keysym
# values, so this pure-constants crate serves the Wayland keyboard unchanged.
xkeysym = "0.2.1"
# Freedesktop icon-theme lookup (taskbar icons) — spec-following code not
# worth maintaining by hand.
freedesktop-icons = { version = "0.4.0", default-features = false }
# Session-bus server for org.freedesktop.Notifications (the compositor
# doubles as the notification daemon). Pure Rust; the interface runs on
# zbus's executor, bridged to calloop over channels.
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
# Smithay logs through tracing; RUST_LOG-style filtering for debugging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["tty"]
# Real-session backend (DRM/GBM scanout, libinput, libseat session). On by
# default; linking needs the libseat system library (Arch package `seatd`).
# Build with --no-default-features on machines without it.
tty = [
    "smithay/backend_udev",
    "smithay/backend_gbm",
    "smithay/backend_libinput",
    "smithay/backend_session_libseat",
]

[dev-dependencies]
# The socket tests (tests/socket.rs) boot the real binary headless and
# drive it as ordinary Wayland clients over its own socket.
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
# wlr-layer-shell client bindings for the layer-shell socket tests.
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
tempfile = "3"

[build-dependencies]
pixel-graphics = { path = "../pixel-graphics" }

# Fast-iterating optimized profile; the installed binary is built with
# `cargo build --profile dist` for full LTO.
[profile.release]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
